--- a/be/package.json
+++ b/be/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "node-fetch": "^2.6.6",
     "nodemon": "^2.0.22"
   }
 }
